@@ -20,7 +20,7 @@ simple_xlsx_writer:    # spreadsheet
 
 querybuilder:   '= 1.1.3'
 yamltest:       '= 0.7.0'
-rubyless:       '= 0.8.6'
+rubyless:       '= 0.8.7'
 property:       '= 2.3.2'
 versions:       '= 0.3.1'
 
