@@ -9,7 +9,7 @@ Gem::Specification.new do |s|
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gaspard Bucher"]
-  s.date = %q{2012-09-06}
+  s.date = %q{2012-09-24}
   s.default_executable = %q{zena}
   s.description = %q{zena is a Ruby on Rails  CMS (content managment system) with a focus on usability, ease of customization and web 2.0 goodness (application like behaviour).}
   s.email = %q{gaspard@teti.ch}
@@ -2475,7 +2475,7 @@ Gem::Specification.new do |s|
       s.add_runtime_dependency(%q<rails>, ["= 2.3.11"])
       s.add_runtime_dependency(%q<httparty>, ["= 0.7.8"])
       s.add_runtime_dependency(%q<simple_xlsx_writer>, [">= 0"])
-      s.add_runtime_dependency(%q<rubyless>, ["= 0.8.6"])
+      s.add_runtime_dependency(%q<rubyless>, ["= 0.8.7"])
       s.add_runtime_dependency(%q<property>, ["= 2.3.2"])
       s.add_runtime_dependency(%q<uuidtools>, ["= 2.0.0"])
       s.add_runtime_dependency(%q<authlogic>, ["= 2.1.3"])
@@ -2501,7 +2501,7 @@ Gem::Specification.new do |s|
       s.add_dependency(%q<rails>, ["= 2.3.11"])
       s.add_dependency(%q<httparty>, ["= 0.7.8"])
       s.add_dependency(%q<simple_xlsx_writer>, [">= 0"])
-      s.add_dependency(%q<rubyless>, ["= 0.8.6"])
+      s.add_dependency(%q<rubyless>, ["= 0.8.7"])
       s.add_dependency(%q<property>, ["= 2.3.2"])
       s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
       s.add_dependency(%q<authlogic>, ["= 2.1.3"])
@@ -2528,7 +2528,7 @@ Gem::Specification.new do |s|
     s.add_dependency(%q<rails>, ["= 2.3.11"])
     s.add_dependency(%q<httparty>, ["= 0.7.8"])
     s.add_dependency(%q<simple_xlsx_writer>, [">= 0"])
-    s.add_dependency(%q<rubyless>, ["= 0.8.6"])
+    s.add_dependency(%q<rubyless>, ["= 0.8.7"])
     s.add_dependency(%q<property>, ["= 2.3.2"])
     s.add_dependency(%q<uuidtools>, ["= 2.0.0"])
     s.add_dependency(%q<authlogic>, ["= 2.1.3"])
